@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Better support for percona 5.7
+    - Do not modify config reference that is passed in, make a copy
+
 0.000021  2021-01-19 14:55:27-08:00 America/Los_Angeles
 
     - For pools, make sure cache db is stopped before marking it as ready
